tests/rosetta/out/Smalltalk/cusip.out
/tmp/cusip.st:18: parse error, expected ']'
