tests/rosetta/out/Smalltalk/cusip.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| ord upper idx isCusip sum i c v candidates cand b |
ord := [:ch | upper := 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.
((((ch >= '0')) and: [((ch <= '9'))])) ifTrue: [
((parseIntStr value: ch) + 48).
] .
idx := indexOf value: upper value: ch.
((idx >= 0)) ifTrue: [
(65 + idx).
] .
0. ].
isCusip := [:s | ((((s size)) ~= 9)) ifTrue: [
false.
] .
sum := 0.
i := 0.
[(i < 8)] whileTrue: [.
c := s copyFrom: (i + 1) to: (i + 1).
v := 0.
((((c >= '0')) and: [((c <= '9'))])) ifTrue: [
v := parseIntStr value: c.
] ifFalse: [
((((c >= 'A')) and: [((c <= 'Z'))])) ifTrue: [
v := ((ord value: c) - 55).
] ifFalse: [
((c = '*')) ifTrue: [
v := 36.
] ifFalse: [
((c = '@')) ifTrue: [
v := 37.
] ifFalse: [
((c = '#')) ifTrue: [
v := 38.
] ifFalse: [
false.
].
].
].
].
].
((((i % 2)) = 1)) ifTrue: [
v := (v * 2).
] .
sum := (((sum + ((v / 10)))) + ((v % 10))).
i := (i + 1).
].
.
((parseIntStr value: s copyFrom: (8 + 1) to: 9) = ((((10 - ((sum % 10)))) % 10))). ].
candidates := {'037833100'. '17275R102'. '38259P508'. '594918104'. '68389X106'. '68389X105'}.
candidates do: [:cand |.
b := 'incorrect'.
(isCusip value: cand) ifTrue: [
b := 'correct'.
] .
Transcript show: ((((cand + (' -> '))) + b)) printString; cr.
].
.
